--- a/index.html
+++ b/index.html
@@ -7,9 +7,30 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a href="index.html" class="logo">
+          <img src="img/logo.png" alt="">
+        </a>
+        <div class="contacts">
+          <div class="contacts__phone-numbers">
+            <a href="tel:83472715428" class="contacts__phone-number">8 (347) 271-54-28</a>
+            <a href="tel:89373633000" class="contacts__phone-number">8 (937) 363-30-00</a>
+          </div>
+          <button class="contacts__btn button">
+            <img src="icons/phone.svg" alt="" class="contacts__btn-icon">
+            <span>Заказать звонок</span>
+          </button>
+        </div>
+      </div>  
+    </div>
+  </header>
   <script src="js/main.js"></script>
 </body>
 </html>
