--- a/index.html
+++ b/index.html
@@ -31,6 +31,35 @@
       </div>  
     </div>
   </header>
+
+  <section class="promo">
+    <div class="promo__inner">
+      <img src="img/promo-cardboard.png" class="promo__cardboard" alt="">
+      <div class="promo__box">
+        <h1 class="promo__title">
+          Производство упаковки из гофрокартона
+        </h1>
+        <span class="promo__subtitle">
+          с доставкой по всей России
+        </span>
+        <form action="" class="promo__form">
+          <div class="promo__text promo__text_light">
+            Получите индивидуальное предложение
+            на производство и поставку гофропродукции 
+          </div>
+          <div class="promo__text promo__text_bold">
+            Образцы упаковки бесплатно!
+          </div>
+          <div class="promo__inputs">
+            <input type="text" class="promo__input-text" placeholder="Введите номер телефона">
+            <input type="submit" class="promo__input-btn button" value="Оставить заявку!">
+          </div>
+          <strong class="promo__info">*Минимальный заказ 500шт</strong>
+        </form>
+      </div>
+    </div>
+  </section>
+
   <script src="js/main.js"></script>
 </body>
 </html>
