--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet" />
 </head>
+
 <body>
   <header class="header">
     <div class="container">
       <div class="header__inner">
         <a href="index.html" class="logo">
-          <img src="img/logo.png" alt="">
+          <img src="img/logo.png" alt="" />
         </a>
         <div class="contacts">
           <div class="contacts__phone-numbers">
@@ -24,35 +25,31 @@
             <a href="tel:89373633000" class="contacts__phone-number">8 (937) 363-30-00</a>
           </div>
           <button class="contacts__btn button">
-            <img src="icons/phone.svg" alt="" class="contacts__btn-icon">
+            <img src="icons/phone.svg" alt="" class="contacts__btn-icon" />
             <span>Заказать звонок</span>
           </button>
         </div>
-      </div>  
+      </div>
     </div>
   </header>
 
   <section class="promo">
     <div class="promo__inner">
-      <img src="img/promo-cardboard.png" class="promo__cardboard" alt="">
+      <img src="img/promo-cardboard.png" class="promo__cardboard" alt="" />
       <div class="promo__box">
-        <h1 class="promo__title">
-          Производство упаковки из гофрокартона
-        </h1>
-        <span class="promo__subtitle">
-          с доставкой по всей России
-        </span>
+        <h1 class="promo__title">Производство упаковки из гофрокартона</h1>
+        <span class="promo__subtitle"> с доставкой по всей России </span>
         <form action="" class="promo__form">
           <div class="promo__text promo__text_light">
-            Получите индивидуальное предложение
-            на производство и поставку гофропродукции 
+            Получите индивидуальное предложение на производство и поставку
+            гофропродукции
           </div>
           <div class="promo__text promo__text_bold">
             Образцы упаковки бесплатно!
           </div>
           <div class="promo__inputs">
-            <input type="text" class="promo__input-text" placeholder="Введите номер телефона">
-            <input type="submit" class="promo__input-btn button" value="Оставить заявку!">
+            <input type="text" class="promo__input-text" placeholder="Введите номер телефона" />
+            <input type="submit" class="promo__input-btn button" value="Оставить заявку!" />
           </div>
           <strong class="promo__info">*Минимальный заказ 500шт</strong>
         </form>
@@ -60,6 +57,259 @@
     </div>
   </section>
 
+  <section class="advantages">
+    <div class="container">
+      <div class="advantages__header">
+        <div class="advantages__info">
+          <div class="advantages__info-title">5 лет</div>
+          <div class="advantages__info-subtitle">
+            На рынке изделий из гофрокартона
+          </div>
+        </div>
+        <div class="advantages__info">
+          <div class="advantages__info-title">до 5 000 000 м<sup>2</sup></div>
+          <div class="advantages__info-subtitle">
+            Ежемесячный объем производства <br />гофрокартона
+          </div>
+        </div>
+        <div class="advantages__info">
+          <div class="advantages__info-title">4 000 м<sup>4</sup></div>
+          <div class="advantages__info-subtitle">Площадь склада</div>
+        </div>
+      </div>
+      <div class="advantages__body">
+        <div class="advantages__item">
+          <img src="icons/advantages/advan_1.png" alt="" class="advantages__item-img" />
+          <div class="advantages__item-box">
+            <span class="advantages__item-title">Производство</span>
+            <span class="advantages__item-text">
+              4 технологические линии спо- собны выполнить любой заказ любой
+              сложности
+            </span>
+          </div>
+        </div>
+        <div class="advantages__item">
+          <img src="icons/advantages/advan_2.png" alt="" class="advantages__item-img" />
+          <div class="advantages__item-box">
+            <span class="advantages__item-title">Производство</span>
+            <span class="advantages__item-text">
+              4 технологические линии спо- собны выполнить любой заказ любой
+              сложности
+            </span>
+          </div>
+        </div>
+        <div class="advantages__item">
+          <img src="icons/advantages/advan_3.png" alt="" class="advantages__item-img" />
+          <div class="advantages__item-box">
+            <span class="advantages__item-title">Производство</span>
+            <span class="advantages__item-text">
+              4 технологические линии спо- собны выполнить любой заказ любой
+              сложности
+            </span>
+          </div>
+        </div>
+        <div class="advantages__item">
+          <img src="icons/advantages/advan_4.png" alt="" class="advantages__item-img" />
+          <div class="advantages__item-box">
+            <span class="advantages__item-title">Производство</span>
+            <span class="advantages__item-text">
+              4 технологические линии спо- собны выполнить любой заказ любой
+              сложности
+            </span>
+          </div>
+        </div>
+        <div class="advantages__item">
+          <img src="icons/advantages/advan_5.png" alt="" class="advantages__item-img" />
+          <div class="advantages__item-box">
+            <span class="advantages__item-title">Производство</span>
+            <span class="advantages__item-text">
+              4 технологические линии спо- собны выполнить любой заказ любой
+              сложности
+            </span>
+          </div>
+        </div>
+        <div class="advantages__item">
+          <img src="icons/advantages/advan_6.png" alt="" class="advantages__item-img" />
+          <div class="advantages__item-box">
+            <span class="advantages__item-title">Производство</span>
+            <span class="advantages__item-text">
+              4 технологические линии спо- собны выполнить любой заказ любой
+              сложности
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="products">
+    <div class="container">
+      <h2 class="products__title title">Наша продукция</h2>
+      <div class="products__items">
+        <div class="products__item">
+          <div class="products__img">
+            <img src="img/prod/prod_1.png" alt="" />
+          </div>
+          <div class="products__name">Гофрокороб 4-х клапанный</div>
+          <div class="products__btns">
+            <button class="products__btn products__btn_o">Подробнее</button>
+            <button class="products__btn button">Получить расчет</button>
+          </div>
+        </div>
+        <div class="products__item">
+          <div class="products__img">
+            <img src="img/prod/prod_2.png" alt="" />
+          </div>
+          <div class="products__name">Гофролоток</div>
+          <div class="products__btns">
+            <button class="products__btn products__btn_o">Подробнее</button>
+            <button class="products__btn button">Получить расчет</button>
+          </div>
+        </div>
+        <div class="products__item">
+          <div class="products__img">
+            <img src="img/prod/prod_3.png" alt="" />
+          </div>
+          <div class="products__name">
+            Гофрокороб самосборный (сложная высечка)
+          </div>
+          <div class="products__btns">
+            <button class="products__btn products__btn_o">Подробнее</button>
+            <button class="products__btn button">Получить расчет</button>
+          </div>
+        </div>
+        <div class="products__item">
+          <div class="products__img">
+            <img src="img/prod/prod_4.png" alt="" />
+          </div>
+          <div class="products__name">Листовой гофрокартон</div>
+          <div class="products__btns">
+            <button class="products__btn products__btn_o">Подробнее</button>
+            <button class="products__btn button">Получить расчет</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="spec-offer">
+    <div class="container">
+      <h2 class="spec-offer__title">
+        Получите индивидуальное предложение <br />
+        на производство и поставку изделий
+      </h2>
+      <form action="" class="spec-offer__form">
+        <label for="" class="spec-offer__text">Введите ваш номер телефона:</label>
+        <input type="tel" class="spec-offer__input" placeholder="+7 (ХХХ) ХХХ-ХХ-ХХ" />
+        <input type="submit" value="Оставить заявку!" class="button spec-offer__btn" />
+        <strong class="spec-offer__info">*Минимальный заказ 500шт</strong>
+      </form>
+    </div>
+  </section>
+
+
+  <section class="our-clients">
+    <div class="container">
+      <h2 class="our-clients__title title">Наши клиенты</h2>
+      <div class="our-clients__items">
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-1.png" alt="" class="our-clients__img" />
+        </div>
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-2.png" alt="" class="our-clients__img" />
+        </div>
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-3.png" alt="" class="our-clients__img" />
+        </div>
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-4.png" alt="" class="our-clients__img" />
+        </div>
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-5.png" alt="" class="our-clients__img" />
+        </div>
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-6.png" alt="" class="our-clients__img" />
+        </div>
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-7.png" alt="" class="our-clients__img" />
+        </div>
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-8.png" alt="" class="our-clients__img" />
+        </div>
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-9.png" alt="" class="our-clients__img" />
+        </div>
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-10.png" alt="" class="our-clients__img" />
+        </div>
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-11.png" alt="" class="our-clients__img" />
+        </div>
+        <div class="our-clients__item">
+          <img src="img/our-clients/clients-logo-12.png" alt="" class="our-clients__img" />
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="reviews">
+    <div class="container">
+      <h2 class="reviews__title title">Отзывы о сотрудничестве</h2>
+      <div class="reviews__slider">
+        <div class="reviews__slider-btns"></div>
+        <div class="reviews__slider-inner">
+          <div class="reviews__slide">
+            <img src="img/reviews/reviews_1.jpg" alt="" class="reviews__slide-img" />
+          </div>
+          <div class="reviews__slide">
+            <img src="img/reviews/reviews_2.jpg" alt="" class="reviews__slide-img" />
+          </div>
+          <div class="reviews__slide">
+            <img src="img/reviews/reviews_3.jpg" alt="" class="reviews__slide-img" />
+          </div>
+          <div class="reviews__slide">
+            <img src="img/reviews/reviews_3.jpg" alt="" class="reviews__slide-img" />
+          </div>
+          <div class="reviews__slide">
+            <img src="img/reviews/reviews_3.jpg" alt="" class="reviews__slide-img" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      <a href="#" class="copyright">© www.gofra-ural.ru 2021 все права защищены;</a>
+    </div>
+  </footer>
+
+  <!-- modal -->
+  <div class="overlay">
+    <div class="popup">
+      <h2 class="popup__title">Форма обратной связи</h2>
+      <button class="popup__close">&times;</button>
+      <div class="popup__form">
+        <form action="" class="main-form">
+          <h3 class="main-form__title">
+            Получите индивидуальное предложение
+            <span>на производство и поставку изделий</span>
+          </h3>
+          <label for="phone" class="main-form__label">Введите ваш номер телефона:</label>
+          <input id="modal-phone" type="tel" required class="main-form__input" name="phone"
+            placeholder="+7 (XXX) XXX-XX-XX" />
+          <button class="button main-form__btn">Оставить заявку!</button>
+          <div class="main-form__note">*Минимальный закакз 500шт</div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="js/jquery.maskedinput.min.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
