--- a/index.html
+++ b/index.html
@@ -8,16 +8,31 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
-/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"/>
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/main.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet" />
   
 </head>
 
 <body>
+
+  <nav class="menu">
+    <div class="container">
+      <ul class="menu__list">
+        <li class="menu__item"><a data-scroll-nav='0' class="active menu__link">О компании</a></li>
+        <li class="menu__item"><a data-scroll-nav='1' class="menu__link">Преимущества</a></li>
+        <li class="menu__item"><a data-scroll-nav='2' class="menu__link">Производство</a></li>
+        <li class="menu__item"><a data-scroll-nav='3'  class="menu__link">Склад</a></li>
+        <li class="menu__item"><a data-scroll-nav='4'  class="menu__link">Продукция</a></li>
+        <li class="menu__item"><a data-scroll-nav='5'  class="menu__link">Наши клиенты </a></li>
+        <li class="menu__item"><a data-scroll-nav='6'  class="menu__link">Сертификаты</a></li>
+        <li class="menu__item"><a data-scroll-nav='7'  class="menu__link">Отзывы</a></li>
+        <li class="menu__item"><a data-scroll-nav='8'  class="menu__link">Контакты</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <header class="header">
     <div class="container">
       <div class="header__inner">
@@ -38,7 +53,7 @@
     </div>
   </header>
 
-  <section class="promo">
+  <section class="promo" data-scroll-index='0'>
     <div class="promo__inner">
       <img src="img/promo-cardboard.png" class="promo__cardboard" alt="" />
       <div class="promo__box">
@@ -62,7 +77,7 @@
     </div>
   </section>
 
-  <section class="advantages">
+  <section class="advantages" data-scroll-index='1'>
     <div class="container">
       <div class="advantages__header">
         <div class="advantages__info">
@@ -147,7 +162,7 @@
     </div>
   </section>
 
-  <section class="products">
+  <section class="products"  data-scroll-index='4'  >
     <div class="container">
       <h2 class="products__title title">Наша продукция</h2>
       <div class="products__items">
@@ -213,7 +228,7 @@
   </section>
 
   
-  <section class="production">
+  <section class="production" data-scroll-index='2'>
     <div class="container">
       <div class="production__wrap">
         <div class="production__slider">
@@ -278,7 +293,7 @@
   </section>
 
 
-  <section class="our-clients">
+  <section class="our-clients" data-scroll-index='5' >
     <div class="container">
       <h2 class="our-clients__title title">Наши клиенты</h2>
       <div class="our-clients__items">
@@ -322,7 +337,7 @@
     </div>
   </section>
 
-  <section class="reviews">
+  <section class="reviews" data-scroll-index='7'>
     <div class="container">
       <h2 class="reviews__title title">Отзывы о сотрудничестве</h2>
       <div class="reviews__slider">
@@ -390,7 +405,15 @@
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
   <script src="js/jquery.maskedinput.min.js"></script>
+  <script src="js/scrollIt.min.js"></script>
   <script src="js/main.js"></script>
+  <script>
+    $(function() {
+        $.scrollIt({
+          topOffset: -80 
+        });
+    });
+  </script>
 </body>
 
 </html>
