created: section map

--- a/index.html
+++ b/index.html
@@ -373,6 +373,34 @@
     </div>
   </section>
 
+  <section class="map" data-scroll-index='8' >
+      <iframe class="map__map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A6f1d812097bf70c72f0dff776a822c1c6d35b900792a0e9063ebd87578269004&amp;source=constructor"  frameborder="0"></iframe>
+      <div class="container">
+        <div class="map__box">
+
+          <div class="map__wrap-address">
+            <h3 class="map__title">Адрес офиса</h3>
+            <div class="map__info">г. Уфа, Проспект октября, 46</div>
+            <h3 class="map__title">Адрес склада</h3>
+            <div class="map__info">г. Уфа, ул. Майкопская, 65/2</div>
+          </div>
+  
+          <div class="map__wrap-phone">
+            <h3 class="map__title">Тел. отдела продаж:</h3>
+            <div class="map__info">8 (347) 271-54-28</div>
+            <div class="map__info">8 (347) 271-54-28</div>
+            <button class="button map__btn">Заказать звонок</button>
+          </div>  
+        
+          <div class="map__wrap-email">            
+            <h3 class="map__title">E-mail</h3>
+            <div class="map__info">urals.karton@gmail.com</div>
+          </div>
+
+        </div>
+      </div>
+  </section>
+
   <footer class="footer">
     <div class="container">
       <a href="#" class="copyright">© www.gofra-ural.ru 2021 все права защищены;</a>
